--- a/Mathematical representation of our proposed 'cheating'.ipynb
+++ b/Mathematical representation of our proposed 'cheating'.ipynb
@@ -304,9 +304,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e594d7fa",
+   "metadata": {},
+   "source": [
+    "## Proposed Verification Scheme (To show the effectiveness of the correction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a6d4768d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of trials1\n",
+      "Verification failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=int(input('No. of trials'))\n",
+    "for i in range(l):\n",
+    "    e2 = np.random.choice([0, 1], size=(Y_prime.shape[0]))\n",
+    "    err2 = np.linalg.norm(Y_prime.T @ (Y_prime @ e2) - e2)\n",
+    "    \n",
+    "    if err2 >= 1e-4:\n",
+    "        print(\"Verification failed\")\n",
+    "        break\n",
+    "    \n",
+    "    \n",
+    "    e1 = np.random.choice([0, 1], size=(Y_prime.shape[0]))\n",
+    "    err1 = np.linalg.norm(Y_prime @ (Lambda_prime @ (Y_prime.T @ e1)) - B @ e1)\n",
+    "    \n",
+    "    if err1 >= 1e-4:\n",
+    "        print(\"Verification failed\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Verification successful for all trials\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "716c5627",
+   "id": "4b07c60a",
    "metadata": {},
    "outputs": [],
    "source": []
