Update Face_Recognition_Attack_on_Zhou and Li Scheme.ipynb

--- a/Face_Recognition_Attack_on_Zhou and Li Scheme.ipynb
+++ b/Face_Recognition_Attack_on_Zhou and Li Scheme.ipynb
@@ -540,6 +540,7 @@
    ],
    "source": [
     "display_original(d_index)"
+    "# Detected image"
    ]
   },
   {
@@ -560,7 +561,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No. of trials80\n",
+      "No. of trials1\n",
       "Verification failed\n"
      ]
     }
