--- a/Maths_behind_'cheating'.ipynb
+++ b/Maths_behind_'cheating'.ipynb
@@ -178,6 +178,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b6f564ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.203930654292488e-12"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(Y_prime @ (Lambda_prime @ (Y_prime.T))- B)  \n",
+    "#For assurance (Representing both quantity are computationally equal)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0af15bef",
    "metadata": {},
@@ -187,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "02566442",
    "metadata": {},
    "outputs": [
@@ -197,7 +219,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8510ccf2",
    "metadata": {},
    "outputs": [
@@ -233,7 +255,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "109c8c31",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Decryption\n",
     "\n",
-    "U = M.T @ Y_prime \n",
+    "X = M.T @ Y_prime \n",
     "L = Lambda_prime - s*np.eye(n)\n",
     "Lambda  = (1/alpha) * L"
    ]
@@ -276,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "380fa858",
    "metadata": {},
    "outputs": [
@@ -286,13 +308,65 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_equal(A,U@Lambda@U.T)"
+    "is_equal(A,X@Lambda@X.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a2f5ee9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of trials= 1\n",
+      "Not Equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=int(input('No. of trials= ')) #For solid proof\n",
+    "\n",
+    "for i in range(l):\n",
+    "    e1 = np.random.choice([0, 1], size=(X.shape[0]))\n",
+    "    err1 = np.linalg.norm(X @ (Lambda @ (X.T @ e1)) - A @ e1)\n",
+    "\n",
+    "    if err1 >= 1e-4:\n",
+    "        print(\"Not Equal\")\n",
+    "        break\n",
+    "\n",
+    "else:\n",
+    "    print(\"Equal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d78bedda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.382073560047575"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(X @ (Lambda @ (X.T))-A) \n",
+    "#Hard evidence that both matrices are not equal"
    ]
   },
   {
@@ -313,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "a6d4768d",
    "metadata": {},
    "outputs": [
@@ -348,9 +422,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe1a45d3",
+   "metadata": {},
+   "source": [
+    "## Proposed verification scheme can detect the cheated outputs in one trial."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b07c60a",
+   "id": "7330444f",
    "metadata": {},
    "outputs": [],
    "source": []
